@@ -9,6 +9,8 @@
     - ChangeLog will only invoked before make pack_src or make changelog.
   + find_lang and files -f .lang are added automatically when
     translations exists.
+  + New targets:
+    - dist: Produce the source archive file. This is in GNU Standard targets.
   + New modules:
     - CmakeFedoraScript: Scripts to be invoked in command line.
     - ManageChangeLogScript: Scripts for handling ChangeLog.
